# poli-as

./: .clang-format  Cargo.toml  Makefile  README.md  flake.nix  hello.txt  linker.ld
assembler/: build.sh  example.as
assembler/include/: maps.hpp  reader.hpp  tokenizer.hpp  types.hpp
assembler/source/: CMakeLists.txt  main.cpp  reader.cpp  tokenizer.cpp
docs/: elf_scratch.txt
src/: assembler.rs  main.rs  reader.rs  tokenizer.rs  utils.rs
src/elf/: elf_writer.rs  mod.rs  section_data.rs
src/emulator/: cpu.rs  instruction_mem.rs  memory.rs  mod.rs  regs.rs  stack.rs
src/lexer/: cpu_op.rs  machine_code_builder.rs  mod.rs  symbolizer.rs
src/lexer/expression/: barrel_shifter.rs  immediate.rs  ls_imm_index.rs  ls_index.rs  ls_multiple.rs  ls_reg_index.rs  mod.rs  reg.rs  reg_literal.rs  three_regs.rs  two_regs.rs  two_regs_literal.rs
src/lexer/operations/: branch_op.rs  load_store_op.rs  mod.rs
src/token/: immediate.rs  instruction.rs  instruction_name.rs  mod.rs  register.rs
